--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-gl-draw": "^1.0.9",
+    "mapbox-gl": "^0.51.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-map-gl": "^4.0.2",
+    "react-mapbox-gl": "^4.0.2",
+    "react-mapbox-gl-draw": "^1.0.4",
     "react-scripts": "2.1.1"
   },
   "scripts": {
