--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mapbox-react-practice",
+  "name": "sean-para-module-5-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
