--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-map-gl": "^4.0.2",
     "react-mapbox-gl": "^4.0.2",
     "react-mapbox-gl-draw": "^1.0.4",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
   "scripts": {
