--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-map-gl": "^4.0.2",
     "react-mapbox-gl": "^4.0.2",
     "react-mapbox-gl-draw": "^1.0.4",
+    "react-reveal": "^1.2.2",
     "react-scripts": "2.1.1"
   },
   "scripts": {
