--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-mapbox-gl": "^4.0.2",
     "react-mapbox-gl-draw": "^1.0.4",
     "react-reveal": "^1.2.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
   "scripts": {
