--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-redux": "^6.0.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.2",
+    "react-scripts": "^2.1.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
@@ -32,5 +32,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.7"
+  }
 }
