--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7",
     "redux-thunk": "^2.3.0",
-    "redux-devtools-extension": "^2.13.7"
+    "serve": "^10.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
